@@ -31,20 +31,24 @@ rm -rf prooftree-*
 mkdir $dir
 pushd $dir
 
-cvs -d $storecvs export -r HEAD -d $subdir src/proof-tree
+cvs export -r HEAD -d $subdir src/proof-tree
 
 pushd $subdir
 
-rm -f make-bundle make-release
+rm -f make-bundle make-release make-dep-package
 
 popd
 # back in $dir
+
+mv $subdir/debian .
 
 tar -czf $tgzfile $subdir
 
 cp $tgzfile prooftree_$version.orig.tar.gz
 
 cp -a $subdir $subdir-orig
+
+mv debian $subdir
 
 pushd $subdir
 
