@@ -1,5 +1,9 @@
 2012-05-14  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
+	* more debian packaging fixes
+
+2012-05-14  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
 	* prepare release
 	* adjust debian stuff
 
